welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
x=x%
   ^lastDigit:10: error: type mismatch;
 found   : Unit
 required: Boolean
f=true
 ^lastDigit:12: error: type mismatch;
 found   : Unit
 required: Boolean
}else{ f=false}
        ^