welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
var f:Boolean=false
var x=a
var y=b

x=x%

if (x==y){

f=true

}else{ f=false}

}